--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -15,13 +15,31 @@
             <img src="../Images/MIE-logo.png" alt="Logo" />
           </div>
           <ul class="nav-links">
-            <li><a href="#" data-page="home.html">Home</a></li>
-            <li><a href="#" data-page="../HTML/about.html">About Us</a></li>
             <li>
-              <a href="#" data-page="../HTML/competition.html">Competition</a>
+              <a href="../HTML/home.html" data-page="../HTML/home.html">Home</a>
             </li>
-            <li><a href="#" data-page="../HTML/projects.html">Projects</a></li>
-            <li><a href="#" data-page="../HTML/contact.html">Contact Us</a></li>
+            <li>
+              <a href="../HTML/about.html" data-page="../HTML/about.html"
+                >About Us</a
+              >
+            </li>
+            <li>
+              <a
+                href="../HTML/competition.html"
+                data-page="../HTML/competition.html"
+                >Competition</a
+              >
+            </li>
+            <li>
+              <a href="../HTML/projects.html" data-page="../HTML/projects.html"
+                >Projects</a
+              >
+            </li>
+            <li>
+              <a href="../HTML/contact.html" data-page="../HTML/contact.html"
+                >Contact Us</a
+              >
+            </li>
           </ul>
           <div class="nav__button" id="nav-button">
             <input type="submit" value="Registration" />
@@ -144,15 +162,16 @@
           <div class="footer-column">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="../HTML/home.html">Home</a></li>
+              <li><a href="../HTML/about.html">About</a></li>
+              <li><a href="../HTML/competition.html">Competition</a></li>
+              <li><a href="../HTML/projects.html">Projects</a></li>
+              <li><a href="../HTML/contact.html">Contact</a></li>
             </ul>
           </div>
           <div class="footer-column">
             <h3>Follow Us</h3>
-              <div class="social-links">
+            <div class="social-links">
               <a href="#"
                 ><img
                   height="30"
