--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -113,9 +113,30 @@
           <div class="footer-column">
             <h3>Follow Us</h3>
             <div class="social-links">
-              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              <a href="#"
+                ><img
+                  height="30"
+                  width="30"
+                  src="../Img/socail icons/facebook.png"
+                  alt="facebook"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
+              <a href="#"
+                ><img
+                  height="30"
+                  width="30"
+                  src="../Img/socail icons/instagram.png"
+                  alt="instagram"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
+              <a href="#"
+                ><img
+                  height="30"
+                  width="30"
+                  src="../Img/socail icons/linkedin.png"
+                  alt="linkedin"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
             </div>
           </div>
         </div>
