add project registration form page

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../Awesome/fontawesome.css" />
     <title>Contact Us</title>
     <link rel="stylesheet" href="../CSS/contact.css" />
+      <script src="../main.js" defer></script>
   </head>
   <body>
     <header>
