--- a/HTML/competition.html
+++ b/HTML/competition.html
@@ -451,6 +451,7 @@
       }
     </style>
     <title>Competition</title>
+    <script src="../main.js" defer></script>
   </head>
   <body>
     <div class="overlay"></div>
