--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -15,7 +15,7 @@
       <nav>
         <div class="nav-container">
           <div class="logo">
-            <img src="../Images/MIE-logo.png" alt="Logo" />
+            <img src="../Img/MIE-logo.png" alt="Logo" />
           </div>
           <ul class="nav-links">
             <li>
@@ -24,13 +24,6 @@
             <li>
               <a href="../HTML/about.html" data-page="../HTML/about.html"
                 >About Us</a
-              >
-            </li>
-            <li>
-              <a
-                href="../HTML/competition.html"
-                data-page="../HTML/competition.html"
-                >Competition</a
               >
             </li>
             <li>
@@ -51,12 +44,8 @@
       </nav>
 
       <div class="landing">
-        <div class="landing-image">
-          <img src="../Images/ssssdff.png" alt="Landing Image" />
-        </div>
         <div class="landing-text">
           <h1>Contact Us</h1>
-          <p>Experience the extraordinary with us.</p>
         </div>
       </div>
     </header>
@@ -66,6 +55,7 @@
         <form action="#" method="post">
           <div class="form-group">
             <input type="text" name="name" placeholder="Your Name *" required />
+            
             <input type="email" name="email" placeholder="E-Mail *" required />
           </div>
           <div class="form-group">
