--- a/HTML/about.html
+++ b/HTML/about.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../CSS/about.css" />
     <!-- Font Awesome links -->
-    <link rel="stylesheet" href="../Awesome/all.css" />
-    <link rel="stylesheet" href="../Awesome/fontawesome.css" />
-    <title>Contact Us</title>
-    <link rel="stylesheet" href="../CSS/contact.css" />
-      <script src="../main.js" defer></script>
+    <link rel="stylesheet" href="../Awesome/all.css">
+    <link rel="stylesheet" href="../Awesome/fontawesome.css">
+    <title>About Us</title>
+    <script src="../main.js" defer></script>
   </head>
   <body>
+    <!--============Header============= -->
     <header>
-      <nav>
+      <nav id="nav-placeholder">
         <div class="nav-container">
           <div class="logo">
             <img src="../Img/MIE-logo.png" alt="Logo" />
@@ -45,29 +46,245 @@
 
       <div class="landing">
         <div class="landing-text">
-          <h1>Contact Us</h1>
+          <h1>About Us.</h1>
         </div>
       </div>
     </header>
-    <div class="container">
-      <div class="form-container">
-        <h3>Get in touch</h3>
-        <form action="#" method="post">
-          <div class="form-group">
-            <input type="text" name="name" placeholder="Your Name *" required />
-            
-            <input type="email" name="email" placeholder="E-Mail *" required />
+
+    <!-- main -->
+    <main>
+      <section>
+        <div class="mie">
+          <h1>Made In Egypt</h1>
+          <p>
+            It was founded in 2006, where students from all over the Egyptian
+            engineering universities compete with their peers with their
+            graduation projects. The target is to bring the best out of them so
+            they are able and ready to convert their graduation projects into
+            their startups by connecting them with the business approaches
+            besides the technical ones.
+          </p>
+        </div>
+      </section>
+      <section>
+        <div>
+          <div class="mission">
+            <div class="icon"><i class="fas fa-bullseye"></i></div>
+            <h2>Mission</h2>
+            <p>
+              To be the leading force in fostering innovation within engineering
+              'Made in Egypt' aims to inspire and equip a generation of senior
+              students with the creativity and excellence to exceed market
+              expectations
+            </p>
           </div>
-          <div class="form-group">
-            <textarea
-              name="message"
-              placeholder="Tell Us Everything"
-            ></textarea>
+          <div class="vision">
+            <div class="icon"><i class="fa-solid fa-eye"></i></div>
+            <h2>Vision</h2>
+            <p>To be the leading force in fostering innovation within engineering 'Made in Egypt' aims to inspire and equip a generation of senior students with the creativity and excellence to exceed market expectations</p>
           </div>
-          <button type="submit">Submit</button>
-        </form>
-      </div>
-    </div>
+        </div>
+      </section>
+
+      <section class="egypt_section">
+        <div class="ieee">
+          <div class="text">
+            <h2>IEEE</h2>
+            <p>IEEE is the Institute of Electrical and Electronics Engineers. It's a non-profit organization Built by a group of engineers who recognized the importance of spreading knowledge and technology in the world</p>
+          </div>
+          <div class="img">
+            <img src="../Img/IEEE YP.png" alt="">
+          </div>
+        </div>
+        <div class="ieee_yp">
+          <div class="img">
+            <img src="../Img/IEEE YP.png" alt="">
+          </div>
+          <div class="text">
+            <h2>IEEE Young Professionals</h2>
+            <p>IEEE is an IEEE affinity group that encourages the participation of young engineers in promoting the engineering community, fosters real communication between the university and the industry, and enhances the skills needed for better performance in the professional world. YP started in Egypt in 2002, and thanks to its fast and confident growth, it is now one of the most active affinity groups in IEEE Region 8, which includes Europe, Africa, and Middle East.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="meet_our_board">
+        <div id="meet_our_board">
+          <div class="text">
+            <h1>MEET OUR BOARD.</h1>
+          </div>
+          <div class="leads">
+            <div class="lead">
+              <img src="../Img/Lead/Seif Mostafa.jpeg" alt="">
+              <h2>Seif Mostafa</h2>
+              <p>MIE Chairman</p>
+              <div class="icon">
+                <a href="#"
+                  ><img
+                    src="../Img/socail icons/linkedin.png"
+                    alt="linkedin"
+                    style="filter: brightness(100) grayscale(1) invert(1)"
+                /></a>
+              </div>
+            </div>
+          <div class="lead">
+            <img src="../Img/Lead/Mohamed Fahmy.jpeg" alt="">
+            <h2>Mohmed Fahmy</h2>
+            <p>MIE Vice Chairman</p>
+            <div class="icon">
+              <a href="#"
+                ><img
+                  src="../Img/socail icons/linkedin.png"
+                  alt="linkedin"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
+            </div>
+          </div>
+          <div class="lead">
+            <img src="../Img/Lead/Mahmoud elbahrawy.jpeg" alt="">
+            <h2>Mahmoud elbahrawy</h2>
+            <p>Treasurer</p>
+            <div class="icon">
+              <a href="#"
+                ><img
+                  src="../Img/socail icons/linkedin.png"
+                  alt="linkedin"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
+            </div>
+          </div>
+          <div class="lead">
+            <img src="../Img/Lead/Ziad.jpeg" alt="">
+            <h2>Ziad Nasser </h2>
+            <p>Secretary</p>
+            <div class="icon">
+              <a href="#"
+                ><img
+                  src="../Img/socail icons/linkedin.png"
+                  alt="linkedin"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
+            </div>
+          </div>
+          <div class="lead">
+            <img src="../Img/Lead/Seif Mostafa.jpeg" alt="">
+            <h2>Sara Jakoub</h2>
+            <p>Sponsorship Lead</p>
+            <div class="icon">
+              <a href="#"
+                ><img
+                  src="../Img/socail icons/linkedin.png"
+                  alt="linkedin"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
+            </div>
+          </div>
+          <div class="lead">
+            <img src="../Img/Lead/Eman.jpeg" alt="">
+            <h2>Eman Elsharkawy</h2>
+            <p>Operations and Materials Lead</p>
+            <div class="icon">
+              <a href="#"
+                ><img
+                  src="../Img/socail icons/linkedin.png"
+                  alt="linkedin"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
+            </div>
+          </div>
+          <div class="lead">
+            <img src="../Img/Lead/WhatsApp Image 2024-02-18 at 1.37.57 PM.jpeg" alt="">
+            <h2>Ahmed Ezzat </h2>
+            <p>Registration Lead</p>
+            <div class="icon">
+              <a href="#"
+                ><img
+                  src="../Img/socail icons/linkedin.png"
+                  alt="linkedin"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
+            </div>
+          </div>
+          <div class="lead">
+            <img src="../Img/Lead/IMG-20230626-WA0140 - Alaa Kamal.jpg" alt="">
+            <h2>Alaa Kamal</h2>
+            <p>Competition Lead</p>
+            <div class="icon">
+              <a href="#"
+                ><img
+                  height="30"
+                  width="30"
+                  src="../Img/socail icons/linkedin.png"
+                  alt="linkedin"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
+            </div>
+          </div>
+          <div class="lead">
+            <img src="../Img/Lead/Abdelrahman.jpeg" alt="">
+            <h2>Abdelrahman Sepaey</h2>
+            <p>HR Lead</p>
+            <div class="icon">
+              <a href="#"
+                ><img
+                  height="30"
+                  width="30"
+                  src="../Img/socail icons/linkedin.png"
+                  alt="linkedin"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
+            </div>
+          </div>
+          <div class="lead">
+            <img src="../Img/Lead/Nour Basel.jpg" alt="">
+            <h2>Nour Basel</h2>
+            <p>Multimedia Lead</p>
+            <div class="icon">
+              <a href="#"
+                ><img
+                  height="30"
+                  width="30"
+                  src="../Img/socail icons/linkedin.png"
+                  alt="linkedin"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
+            </div>
+          </div>
+          <div class="lead">
+            <img src="../Img/Lead/Omar Alsaqaan.jpeg" alt="">
+            <h2>Omar Elsaqaan</h2>
+            <p>PR Lead</p>
+            <div class="icon">
+              <a href="#"
+                ><img
+                  height="30"
+                  width="30"
+                  src="../Img/socail icons/linkedin.png"
+                  alt="linkedin"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
+            </div>
+          </div>
+          <div class="lead">
+            <img src="../Img/Lead/Mahmoud Rafaat.jpeg" alt="">
+            <h2>Mahmoud Raafat</h2>
+            <p>Marketing Lead</p>
+            <div class="icon">
+              <a href="#"
+                ><img
+                  height="30"
+                  width="30"
+                  src="../Img/socail icons/linkedin.png"
+                  alt="linkedin"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
+            </div>
+          </div>
+          </div>
+        </div>
+      </section>
+
+      
+    </main>
 
     <!-- =============Footer============ -->
     <footer class="footer">
@@ -97,7 +314,7 @@
               <li><a href="../HTML/home.html">Home</a></li>
               <li><a href="../HTML/about.html">About</a></li>
               <li><a href="../HTML/competition.html">Competition</a></li>
-              <li><a href="../HTML/competition.html">Projects</a></li>
+              <li><a href="../HTML/projects.html">Projects</a></li>
               <li><a href="../HTML/contact.html">Contact</a></li>
             </ul>
           </div>
